--- a/src/app/pages/skills-page/skills-page.component.html
+++ b/src/app/pages/skills-page/skills-page.component.html
@@ -29,6 +29,7 @@
          [ngStyle]="{'animation-delay': (i * 0.1) + 's'}"
          [ngSrc]="skill.src"
          [alt]="skill.alt"
-         height="70" width="70">
+         height="70"
+         width="70">
   </div>
 </div>
