--- a/src/app/pages/contact-page/contact-page.component.scss
+++ b/src/app/pages/contact-page/contact-page.component.scss
@@ -15,3 +15,41 @@
     }
   }
 }
+
+@media (max-width: 800px) {
+  #container-contact-page {
+    flex-direction: column !important;
+
+    h1 {
+      .title-contact-page {
+        span {
+          font-size: 24px !important;
+        }
+      }
+    }
+
+    .contact-image {
+      width: 100%;
+      height: 42%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      img {
+        width: 250px;
+        height: 250px;
+      }
+    }
+
+    .contact-info {
+      max-width: 100%;
+      margin: 0;
+
+      .description-contact-page {
+        margin: 0;
+        font-size: 14px;
+      }
+    }
+  }
+}
+
