--- a/src/app/pages/skills-page/skills-page.component.scss
+++ b/src/app/pages/skills-page/skills-page.component.scss
@@ -98,7 +98,6 @@
   }
 }
 
-
 @media (max-width: 600px), (max-height: 600px) {
   #container-skill-page {
     min-width: 270px;
@@ -108,7 +107,7 @@
     h1 {
       .title-skill-page {
         span {
-          font-size: 18px !important;
+          font-size: 24px !important;
         }
       }
     }
@@ -116,6 +115,10 @@
     .description-skill-page {
       font-size: 14px;
       max-width: 90%;
+
+      span {
+        margin: 0;
+      }
     }
 
     .skills-page {
