--- a/src/app/pages/contact-page/contact-page.component.scss
+++ b/src/app/pages/contact-page/contact-page.component.scss
@@ -16,6 +16,11 @@
 
     .contact-details {
       font-size: 18px;
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
     }
   }
 }
