--- a/src/app/pages/about-page/about-page.component.scss
+++ b/src/app/pages/about-page/about-page.component.scss
@@ -30,24 +30,26 @@
 
     .about-box {
       width: 100%;
-      min-width: 350px;
-      padding: 0 10px 0 0;
+      max-width: 755px;
+      padding: 0 20px 0 0;
 
       .subtitle-about-page {
-        padding: 10px 0;
+        color: var(--subitle-color);
         font-family: var(--font-secondary), sans-serif;
         font-size: var(--font-size-medium);
+        padding: 10px 0;
         line-height: 24px;
-        color: var(--description-color);
       }
     }
 
     .description-about-page {
+      width: 100%;
+      max-width: 650px;
       height: 310px;
       display: flex;
       flex-direction: column;
       align-items: flex-start;
-      justify-content: space-between;
+      justify-content: space-evenly;
 
       span {
         display: block;
@@ -64,7 +66,7 @@
       }
 
       span {
-        font-size: 24px !important;
+        font-size: var(--font-size-large-mobile) !important;
       }
     }
 
@@ -79,7 +81,7 @@
         min-width: unset;
 
         .subtitle-about-page {
-          font-size: 14px;
+          font-size: var(--font-size-medium-mobile);
         }
       }
 
@@ -88,7 +90,7 @@
         height: 280px;
 
         span {
-          font-size: 14px;
+          font-size: var(--font-size-small-mobile);
         }
       }
     }
