--- a/src/app/pages/skills-page/skills-page.component.scss
+++ b/src/app/pages/skills-page/skills-page.component.scss
@@ -1,7 +1,6 @@
 #container-skill-page {
   background-color: var(--primary-bg-color);
   color: var(--text-color);
-  font-family: var(--font-main), sans-serif;
   width: 100%;
   height: 100vh;
   display: flex;
@@ -10,12 +9,11 @@
   justify-content: center;
 
   h1 {
+    width: 100%;
     margin: 0 0 10px 0;
     display: flex;
     flex-wrap: wrap;
-    font-size: var(--font-size-large);
-    line-height: 28px;
-    text-align: center;
+    justify-content: center;
 
     .title-skill-page {
       display: inline-block;
@@ -24,9 +22,11 @@
 
       span {
         display: inline-block;
-        font-size: var(--font-size-small);
         transition: color 0.3s ease-out;
         cursor: default;
+        font-size: var(--font-size-large);
+        font-family: var(--font-main), sans-serif;
+        line-height: 28px;
       }
 
       span:hover {
@@ -48,6 +48,7 @@
       text-align: center;
       display: block;
       margin-bottom: 15px;
+      font-size: var(--font-size-small);
 
       a {
         text-decoration: none;
@@ -107,17 +108,18 @@
     h1 {
       .title-skill-page {
         span {
-          font-size: 24px !important;
+          font-size: var(--font-size-large-mobile);
         }
       }
     }
 
     .description-skill-page {
-      font-size: 14px;
       max-width: 90%;
+      margin-bottom: 5px;
 
       span {
         margin: 0;
+        font-size: var(--font-size-small-mobile);
       }
     }
 
