--- a/src/app/pages/base.scss
+++ b/src/app/pages/base.scss
@@ -46,6 +46,25 @@
       }
     }
   }
+
+  button {
+    color: var(--highlight-color);
+    width: 100%;
+    height: 30px;
+    padding: 0;
+    background: none;
+    border: none;
+    font: inherit;
+    cursor: pointer;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+    font-size: var(--font-size-small);
+    font-weight: 600;
+    letter-spacing: 1px;
+    transition: color 0.3s ease-in-out;
+  }
 }
 
 .description-contact-page,
@@ -60,6 +79,8 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   line-height: 24px;
+
+
 }
 
 a {
