Creation page professional training and modify page experience

--- a/src/app/pages/contact-page/contact-page.component.html
+++ b/src/app/pages/contact-page/contact-page.component.html
@@ -1,5 +1,5 @@
 <div id="container-contact-page">
-  <div class="contact-image animate__animated animate__slideInTop">
+  <div class="contact-image animate__animated animate__slideInTop floating">
     <img [ngSrc]="dataContactPage.image.src"
          [alt]="dataContactPage.image.alt"
          height="400"
