--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -27,7 +27,7 @@
       </mat-icon>
     </button>
   </div>
-  <div class="image-home-page animate__animated animate__fadeInRight animate__delay-1s">
+  <div class="image-home-page animate__animated animate__fadeInRight animate__delay-1s floating">
     <img [ngSrc]="homePageData.mainImage.src"
          [alt]="homePageData.mainImage.alt"
          [title]="homePageData.mainImage.alt"
