--- a/src/app/pages/base.scss
+++ b/src/app/pages/base.scss
@@ -108,3 +108,19 @@ a:hover {
     opacity: 1;
   }
 }
+
+@keyframes floating {
+  0% {
+    transform: translateY(0px);
+  }
+  50% {
+    transform: translateY(-10px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
+
+.floating {
+  animation: floating 3s ease-in-out infinite;
+}
