--- a/src/app/pages/professional-experiences-page/professional-experiences-page.component.scss
+++ b/src/app/pages/professional-experiences-page/professional-experiences-page.component.scss
@@ -5,61 +5,81 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  height: 800px;
+
+  h1 {
+    font-family: var(--font-main), sans-serif;
+    font-size: var(--font-size-large);
+    text-align: center;
+  }
 
   .base-experience-container {
     width: 100%;
     height: 560px;
     display: flex;
     flex-wrap: wrap;
+    align-items: center;
     justify-content: center;
     gap: 20px;
     padding: 20px;
-  }
 
-  .experience-card {
-    background-color: rgba(255, 255, 255, 0.1);
-    border: 1px solid var(--highlight-color);
-    border-radius: 12px;
-    padding: 20px;
-    width: 260px;
-    height: auto;
-    cursor: pointer;
-    transition: all 0.3s ease;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-  }
+    .experience-card {
+      background-color: rgba(255, 255, 255, 0.1);
+      border: 1px solid var(--highlight-color);
+      border-radius: 12px;
+      padding: 20px;
+      width: 260px;
+      height: 150px;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
 
-  .experience-card:hover {
-    transform: scale(1.08);
-    box-shadow: 0px 4px 15px rgba(4, 178, 198, 0.4);
-  }
+      h3 {
+        font-family: var(--font-main), sans-serif;
+        font-size: var(--font-size-medium);
+        color: var(--highlight-color);
+        margin: 0;
+        height: 100%;
+        display: flex;
+        align-items: center;
+      }
 
-  .experience-card h3 {
-    font-family: var(--font-main), sans-serif;
-    font-size: var(--font-size-medium);
-    color: var(--highlight-color);
-  }
+      span {
+        color: var(--subitle-color);
+        font-family: var(--font-secondary), sans-serif;
+        font-size: var(--font-size-small);
+      }
+    }
 
-  .experience-card span {
-    color: var(--subitle-color);
-    font-family: var(--font-secondary), sans-serif;
-    font-size: var(--font-size-small);
+    .experience-card:hover {
+      transform: scale(1.08);
+      box-shadow: 0 4px 15px rgba(4, 178, 198, 0.4);
+    }
   }
 }
 
-@media (max-width: 400px) {
+@media (max-width: 600px) {
   #container-experience-container {
+    justify-content: space-between;
+    height: 465px;
+
+    h1 {
+      font-size: var(--font-size-large-mobile) !important;
+    }
+
     .base-experience-container {
       min-height: 460px;
 
       .experience-card {
         width: 90%;
         padding: 15px;
+        height: 105px;
 
         h3 {
-          font-size: var(--font-size-medium-mobile);
+          font-size: var(--font-size-medium-mobile) !important;
         }
 
         span {
