--- a/src/app/pages/training-page/training-page.component.scss
+++ b/src/app/pages/training-page/training-page.component.scss
@@ -1,3 +1,122 @@
 #container-training-page {
-  width: 100%;
+  height: 620px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+
+  h1 {
+    width: 100%;
+    font-family: var(--font-family-primary), sans-serif;
+    font-size: var(--font-size-large);
+    text-align: center;
+  }
+
+  .base-training-page {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 20px;
+    padding: 20px;
+
+    .flip-card {
+      background-color: transparent;
+      width: 250px;
+      height: 200px;
+      perspective: 1000px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      &:hover .flip-card-inner {
+        transform: rotateY(-180deg);
+      }
+
+      .flip-card-inner {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        transition: transform 0.8s;
+        transform-style: preserve-3d;
+
+        .flip-card-front, .flip-card-back {
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          backface-visibility: hidden;
+          border-radius: 15px;
+          overflow: hidden;
+          background: linear-gradient(145deg, #2c3e50, #aeb4ba);
+          box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
+          img {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+            object-position: center;
+            padding: 10px;
+          }
+
+          &.flip-card-back {
+            background: linear-gradient(145deg, #f0f0f0, #cfcfcf);
+            color: #444;
+            transform: rotateY(180deg);
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            padding: 15px;
+
+            h3 {
+              font-family: var(--font-family-secondary), sans-serif;
+              font-size: var(--font-size-medium);
+              margin-bottom: 10px;
+            }
+
+            span {
+              font-family: var(--font-family-secondary), sans-serif;
+              font-size: var(--font-size-small);
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 800px) {
+  #container-training-page {
+    height: 515px;
+
+    h1 {
+      font-size: var(--font-size-large-mobile);
+    }
+
+    .base-training-page {
+      .flip-card {
+        width: 200px;
+        height: 200px;
+
+        .flip-card-inner {
+          .flip-card-front,
+          .flip-card-back {
+            &.flip-card-back {
+              h3 {
+                font-size: var(--font-size-small-mobile);
+              }
+
+              span {
+                font-size: var(--font-size-small-mobile);
+              }
+            }
+          }
+        }
+      }
+    }
+  }
 }
