--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,9 +1,11 @@
 <div id="container-navbar">
-  <div class="nav-left" (click)="scrollToHome()">
-    <img ngSrc="assets/gif-code.gif" alt="DVLPR" title="" height="720" width="976"/>
-    <span>DVLPR</span>
-  </div>
-  <div class="nav-right">
-    <button class="contact-button" (click)="scrollToContact()">Contato</button>
+  <div class="base-navbar">
+    <div class="nav-left" (click)="scrollToHome()">
+      <img ngSrc="assets/gif-code.gif" alt="DVLPR" title="" height="720" width="976"/>
+      <span>DVLPR</span>
+    </div>
+    <div class="nav-right">
+      <button class="contact-button" (click)="scrollToContact()">Contato</button>
+    </div>
   </div>
 </div>
