--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -96,8 +96,7 @@
     }
 
     .base-info-home-page {
-      height: 300px;
-      min-width: 350px;
+      height: auto;
       padding-top: 0;
       justify-content: space-between;
 
