--- a/src/app/pages/skills-page/skills-page.component.scss
+++ b/src/app/pages/skills-page/skills-page.component.scss
@@ -4,96 +4,105 @@
   width: 100%;
   height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
 
-  h1 {
+  .base-skill-page {
     width: 100%;
-    margin: 0 0 10px 0;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-
-    .title-skill-page {
-      display: inline-block;
-      margin: 0 15px 10px 0;
-      overflow: visible;
-
-      span {
-        display: inline-block;
-        transition: color 0.3s ease-out;
-        cursor: default;
-        font-size: var(--font-size-large);
-        font-family: var(--font-main), sans-serif;
-        line-height: 28px;
-      }
-
-      span:hover {
-        color: var(--highlight-color);
-        animation: waterDrop 0.3s ease-in-out forwards;
-      }
-    }
-  }
-
-  .description-skill-page {
-    width: 100%;
-    max-width: 60%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 
-    span {
-      text-align: center;
-      display: block;
-      margin-bottom: 15px;
-      font-size: var(--font-size-small);
+    h1 {
+      width: 100%;
+      margin: 0 0 10px 0;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
 
-      a {
-        text-decoration: none;
+      .title-skill-page {
+        display: inline-block;
+        margin: 0 15px 10px 0;
+        overflow: visible;
+
+        span {
+          display: inline-block;
+          transition: color 0.3s ease-out;
+          cursor: default;
+          font-size: var(--font-size-large);
+          font-family: var(--font-main), sans-serif;
+          line-height: 28px;
+        }
+
+        span:hover {
+          color: var(--highlight-color);
+          animation: waterDrop 0.3s ease-in-out forwards;
+        }
       }
     }
-  }
 
-  .skills-page {
-    width: 100%;
-    max-width: 80%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 10px;
+    .description-skill-page {
+      width: 100%;
+      max-width: 60%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
 
-    img {
-      object-fit: contain;
-      margin: 10px;
-      display: block;
+      span {
+        text-align: center;
+        display: block;
+        margin-bottom: 15px;
+        font-size: var(--font-size-small);
+
+        a {
+          text-decoration: none;
+        }
+      }
+    }
+
+    .skills-page {
+      width: 100%;
+      max-width: 80%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 10px;
+
+      img {
+        object-fit: contain;
+        margin: 10px;
+        display: block;
+      }
     }
   }
 }
 
 @media (max-width: 1000px) {
   #container-skill-page {
-    h1 {
-      .title-skill-page {
-        span {
-          font-size: 32px !important;
+    .base-skill-page {
+      h1 {
+        .title-skill-page {
+          span {
+            font-size: 32px !important;
+          }
         }
       }
-    }
 
-    .description-skill-page {
-      font-size: 18px;
-      max-width: 95%;
-    }
+      .description-skill-page {
+        font-size: 18px;
+        max-width: 95%;
+      }
 
-    .skills-page {
-      max-width: 95%;
+      .skills-page {
+        max-width: 95%;
 
-      img {
-        height: 50px !important;
-        width: 50px !important;
+        img {
+          height: 50px !important;
+          width: 50px !important;
+        }
       }
     }
   }
@@ -101,36 +110,39 @@
 
 @media (max-width: 600px), (max-height: 600px) {
   #container-skill-page {
-    min-width: 270px;
-    justify-content: space-evenly;
-    padding: 100px 0;
 
-    h1 {
-      .title-skill-page {
-        span {
-          font-size: var(--font-size-large-mobile);
+    .base-skill-page {
+      height: 70vh;
+      min-width: 270px;
+      justify-content: space-evenly;
+
+      h1 {
+        .title-skill-page {
+          span {
+            font-size: var(--font-size-large-mobile);
+          }
         }
       }
-    }
 
-    .description-skill-page {
-      max-width: 90%;
-      margin-bottom: 5px;
+      .description-skill-page {
+        max-width: 90%;
+        margin-bottom: 5px;
 
-      span {
-        margin: 0;
-        font-size: var(--font-size-small-mobile);
+        span {
+          margin: 0;
+          font-size: var(--font-size-small-mobile);
+        }
       }
-    }
 
-    .skills-page {
-      max-width: 90%;
-      gap: 0;
+      .skills-page {
+        max-width: 90%;
+        gap: 0;
 
-      img {
-        height: 30px !important;
-        width: 30px !important;
-        margin: 5px;
+        img {
+          height: 30px !important;
+          width: 30px !important;
+          margin: 5px;
+        }
       }
     }
   }
