--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,21 +2,21 @@
   <app-navbar></app-navbar>
 
   <div id="fullpage">
-<!--    <div class="section">-->
-<!--      <app-home-page></app-home-page>-->
-<!--    </div>-->
+    <div class="section">
+      <app-home-page></app-home-page>
+    </div>
     <div class="section">
       <app-about-page></app-about-page>
     </div>
-<!--    <div class="section">-->
-<!--      <app-skills-page></app-skills-page>-->
-<!--    </div>-->
-<!--    <div class="section">-->
-<!--      <app-projects-page></app-projects-page>-->
-<!--    </div>-->
-<!--    <div class="section">-->
-<!--      <app-contact-page></app-contact-page>-->
-<!--    </div>-->
+    <div class="section">
+      <app-skills-page></app-skills-page>
+    </div>
+    <div class="section">
+      <app-projects-page></app-projects-page>
+    </div>
+    <div class="section">
+      <app-contact-page></app-contact-page>
+    </div>
   </div>
 
   <app-footer></app-footer>
