--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -4,73 +4,79 @@
   left: 0;
   width: 100%;
   height: 60px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px 55px;
   background: transparent;
   z-index: 10;
 
-  .nav-left {
-    color: var(--text-color);
+  .base-navbar {
+    padding: 10px 55px;
     display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     align-items: center;
-    justify-content: center;
-    cursor: pointer;
 
-    img {
-      width: 35px;
-      height: 35px;
-      border-radius: 5px;
-    }
-
-    span {
-      font-size: 32px;
-      font-family: var(--font-secondary), sans-serif;
-      font-weight: bold;
-      padding-left: 20px;
-    }
-  }
-
-  .nav-right {
-    .contact-button {
-      padding: 15px 30px;
-      background: none;
-      border: 2px solid var(--highlight-color);
-      color: var(--highlight-color);
-      font-size: 16px;
+    .nav-left {
+      color: var(--text-color);
+      display: flex;
+      align-items: center;
+      justify-content: center;
       cursor: pointer;
-      border-radius: 8px;
-      transition: all 0.3s ease-in-out;
+
+      img {
+        width: 35px;
+        height: 35px;
+        border-radius: 5px;
+      }
+
+      span {
+        font-size: 32px;
+        font-family: var(--font-secondary), sans-serif;
+        font-weight: bold;
+        padding-left: 20px;
+      }
     }
 
-    .contact-button:hover {
-      background: var(--highlight-color);
-      color: #fff;
+    .nav-right {
+      .contact-button {
+        padding: 15px 30px;
+        background: none;
+        border: 2px solid var(--highlight-color);
+        color: var(--highlight-color);
+        font-size: 16px;
+        cursor: pointer;
+        border-radius: 8px;
+        transition: all 0.3s ease-in-out;
+      }
+
+      .contact-button:hover {
+        background: var(--highlight-color);
+        color: #fff;
+      }
     }
   }
 }
 
 @media (max-width: 600px) {
   #container-navbar {
-    padding: 5px 25px;
+    .base-navbar {
+      padding: 5px 25px !important;
 
-    .nav-left {
-      margin-right: 20px;
+      .nav-left {
+        margin-right: 20px;
 
-      img {
-        width: 25px;
-        height: 25px;
+        img {
+          width: 25px;
+          height: 25px;
+        }
+
+        span {
+          font-size: 24px;
+        }
       }
 
-      span {
-        font-size: 24px;
-      }
-    }
-
-    .nav-right {
-      .contact-button {
-        padding: 10px 20px;
+      .nav-right {
+        .contact-button {
+          padding: 10px 20px;
+        }
       }
     }
   }
