--- a/src/app/pages/professional-experiences-page/professional-experiences-page.component.scss
+++ b/src/app/pages/professional-experiences-page/professional-experiences-page.component.scss
@@ -15,7 +15,7 @@
 
   .base-experience-container {
     width: 100%;
-    height: 560px;
+    max-height: 560px;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -74,7 +74,7 @@
       min-height: 460px;
 
       .experience-card {
-        width: 90%;
+        width: 45%;
         padding: 15px;
         height: 105px;
 
