--- a/src/app/pages/training-page/training-page.component.scss
+++ b/src/app/pages/training-page/training-page.component.scss
@@ -59,9 +59,12 @@
             object-fit: contain;
             object-position: center;
             padding: 10px;
+            box-sizing: border-box;
           }
 
           &.flip-card-back {
+            box-sizing: border-box;
+            height: 100%;
             background: linear-gradient(145deg, #f0f0f0, #cfcfcf);
             color: #444;
             transform: rotateY(180deg);
