--- a/src/app/pages/about-page/about-page.component.scss
+++ b/src/app/pages/about-page/about-page.component.scss
@@ -1,6 +1,10 @@
 #container-about-page {
   padding: 5vh 8vw !important;
 
+  h1 {
+    min-height: 100px;
+  }
+
   .about-bg {
     position: absolute;
     width: 100%;
@@ -32,6 +36,7 @@
     .about-box {
       width: 100%;
       max-width: 755px;
+      overflow: hidden;
 
       .subtitle-about-page {
         color: var(--subitle-color);
@@ -50,6 +55,7 @@
       flex-direction: column;
       align-items: flex-start;
       justify-content: space-evenly;
+      overflow: hidden;
 
       span {
         display: block;
