--- a/src/app/pages/professional-experiences-page/professional-experiences-page.component.html
+++ b/src/app/pages/professional-experiences-page/professional-experiences-page.component.html
@@ -5,6 +5,7 @@
          class="experience-card animate__animated animate__bounceIn"
          (click)="openModal(experience)">
       <h3>{{ experience.title }}</h3>
+      <span>{{ experience.description }}</span>
     </div>
   </div>
   <app-modal-experiences-details
