--- a/src/app/pages/about-page/about-page.component.scss
+++ b/src/app/pages/about-page/about-page.component.scss
@@ -36,6 +36,7 @@
     .about-box {
       width: 100%;
       max-width: 755px;
+      margin-right: 20px;
       overflow: hidden;
 
       .subtitle-about-page {
@@ -59,6 +60,33 @@
 
       span {
         display: block;
+      }
+
+      .button-container {
+        width: 100%;
+        margin-top: 20px;
+        text-align: center;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        .btn {
+          background-color: #04b2c6;
+          color: white;
+          font-size: 16px;
+          padding: 10px 20px;
+          border: none;
+          border-radius: 5px;
+          cursor: pointer;
+          transition: background-color 0.3s;
+          width: 100%;
+          max-width: 200px;
+          height: 60px;
+        }
+
+        .btn:hover {
+          background-color: #03a0b2;
+        }
       }
     }
 
