--- a/src/app/pages/training-page/training-page.component.html
+++ b/src/app/pages/training-page/training-page.component.html
@@ -5,10 +5,10 @@
       <div class="flip-card-inner">
         <div class="flip-card-front">
           <img [src]="item?.image" [alt]="item.title">
+          <h3>{{ item.title }}</h3>
         </div>
         <div class="flip-card-back">
-          <h3>{{ item.title }}</h3>
-          <span>{{ item.description }}</span>
+          <span>{{ item.details }}</span>
         </div>
       </div>
     </div>
