Creation page slides for mobile

--- a/src/app/pages/about-page/about-page.component.html
+++ b/src/app/pages/about-page/about-page.component.html
@@ -6,7 +6,7 @@
          height="1140"
          width="980">
   </div>
-  <div class="slide teste">
+  <div class="slide">
     <div class="about-content animate__animated animate__fade">
       <div class="about-box">
         <h1 class="font-60">
@@ -37,7 +37,7 @@
         <span>{{ aboutPage.description[1] }}</span>
         <span>{{ aboutPage.description[2] }}</span>
         <div class="button-container">
-          <button (click)="goToPersonalDevelopment()" class="btn">Desenvolvimento Pessoal</button>
+          <button (click)="goToPersonalDevelopment()" class="btn development">Desenvolvimento Pessoal</button>
           <button (click)="goToProfessionalExperience()" class="btn">Experiência Profissional</button>
         </div>
       </div>
