--- a/src/app/pages/base.scss
+++ b/src/app/pages/base.scss
@@ -1,6 +1,7 @@
 #container-contact-page,
 #container-about-page,
-#container-home-page {
+#container-home-page,
+#container-projects-page {
   background-color: var(--primary-bg-color);
   color: var(--text-color);
   font-family: var(--font-main), sans-serif;
