--- a/src/app/pages/about-page/about-page.component.scss
+++ b/src/app/pages/about-page/about-page.component.scss
@@ -82,6 +82,9 @@
           width: 100%;
           max-width: 200px;
           height: 60px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
         }
 
         .btn:hover {
@@ -112,7 +115,6 @@
     }
 
     .about-content {
-      max-width: 85%;
       padding: 0;
       flex-direction: column;
       align-items: center;
@@ -120,15 +122,31 @@
 
       .about-box {
         min-width: unset;
+        margin: 0;
 
         .subtitle-about-page {
-          font-size: var(--font-size-medium-mobile);
+          padding: 0;
+          font-size: var(--font-size-small-mobile);
         }
       }
 
       .description-about-page {
         justify-content: space-evenly;
-        height: 280px;
+
+        .button-container {
+          flex-direction: column;
+          justify-content: center;
+
+          .btn {
+            font-size: 14px;
+            min-width: 100%;
+            height: 30px;
+          }
+
+          .development {
+            margin: 4px 0;
+          }
+        }
 
         span {
           font-size: var(--font-size-small-mobile);
