--- a/src/app/pages/training-page/training-page.component.scss
+++ b/src/app/pages/training-page/training-page.component.scss
@@ -60,7 +60,7 @@
             font-size: var(--font-size-medium);
             margin-bottom: 10px;
             color: #333;
-            padding: 0 20px;
+            padding: 10px 20px 0 20px;
             height: 100px;
           }
 
@@ -112,7 +112,7 @@
     .base-training-page {
       .flip-card {
         width: 200px;
-        height: 200px;
+        height: 300px;
 
         .flip-card-inner {
           .flip-card-front,
