--- a/src/app/pages/projects-page/projects-page.component.html
+++ b/src/app/pages/projects-page/projects-page.component.html
@@ -1,3 +1,4 @@
 <div id="container-projects-page">
-  <app-project-card></app-project-card>
+  <app-project-card-slides-desktop *ngIf="isDesktop"></app-project-card-slides-desktop>
+  <app-project-card-slides-mobile *ngIf="!isDesktop"></app-project-card-slides-mobile>
 </div>
