--- a/src/app/components/project-card/project-card-slides-desktop/project-card-slides-desktop.component.html
+++ b/src/app/components/project-card/project-card-slides-desktop/project-card-slides-desktop.component.html
@@ -1,14 +1,11 @@
 <div id="container-project-carousel">
-  <!--  <h1>Projetos Pessoais</h1>-->
-
-
+  <h1 class="carousel-title animate__animated animate__fadeIn">Projetos Pessoais</h1>
   <div class="base-project-carousel animate__animated animate__fadeIn">
-
     <button class="project-prev animate__animated animate__fadeInLeft" (click)="prevSlide()">
       <mat-icon>chevron_left</mat-icon>
     </button>
 
-    <div class="base-project-carousel">
+    <div class="base-project-carousel animate__animated animate__fadeIn">
       <div class="project-wrapper">
         <div *ngFor="let project of projects; let i = index"
              [ngClass]="{
@@ -33,6 +30,5 @@
     <button class="project-next animate__animated animate__fadeInRight" (click)="nextSlide()">
       <mat-icon>chevron_right</mat-icon>
     </button>
-
   </div>
 </div>
