--- a/src/app/components/project-card/project-card-slides-desktop/project-card-slides-desktop.component.scss
+++ b/src/app/components/project-card/project-card-slides-desktop/project-card-slides-desktop.component.scss
@@ -1,13 +1,20 @@
 #container-project-carousel {
-  width: 80vw;
+  width: 60vw;
   max-height: 80vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
 
+  .carousel-title {
+    font-family: var(--font-main), sans-serif;
+    font-size: 2rem;
+  }
+
   .base-project-carousel {
     width: 100%;
+    max-width: 95%;
+    height: 430px;
     display: flex;
     align-items: center;
     justify-content: center;
