--- a/src/app/pages/training-page/training-page.component.scss
+++ b/src/app/pages/training-page/training-page.component.scss
@@ -54,6 +54,7 @@
           flex-direction: column;
           justify-content: space-between;
           align-items: center;
+          text-align: center;
 
           h3 {
             font-family: var(--font-family-secondary), sans-serif;
@@ -117,13 +118,11 @@
         .flip-card-inner {
           .flip-card-front,
           .flip-card-back {
-            &.flip-card-back {
-              h3 {
-                font-size: var(--font-size-small-mobile);
-              }
+            h3 {
+              font-size: var(--font-size-small-mobile) !important;
 
               span {
-                font-size: var(--font-size-small-mobile);
+                font-size: var(--font-size-small-mobile) !important;
               }
             }
           }
