--- a/src/app/components/project-card/project-card-slides-mobile/project-card-slides-mobile.component.scss
+++ b/src/app/components/project-card/project-card-slides-mobile/project-card-slides-mobile.component.scss
@@ -77,6 +77,7 @@
           object-fit: cover;
           border-radius: 8px;
           transition: transform 0.3s ease;
+          position: static !important;
         }
 
         a {
