--- a/src/app/components/modal-experiences-details/modal-experiences-details.component.html
+++ b/src/app/components/modal-experiences-details/modal-experiences-details.component.html
@@ -5,6 +5,6 @@
     <ul>
       <li>{{ selectedExperiences.details }}</li>
     </ul>
-    <button (click)="closeModal()">Fechar</button>
+    <button (click)="closeModal()">{{randomTexts.close}}</button>
   </div>
 </div>
