--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -5,7 +5,7 @@
       <span>DVLPR</span>
     </div>
     <div class="nav-right">
-      <button class="contact-button" (click)="scrollToContact()">Contato</button>
+      <button class="contact-button" (click)="scrollToContact()">{{ randomTexts.contact }}</button>
     </div>
   </div>
 </div>
