--- a/src/app/components/project-card/project-card-slides-mobile/project-card-slides-mobile.component.scss
+++ b/src/app/components/project-card/project-card-slides-mobile/project-card-slides-mobile.component.scss
@@ -91,9 +91,9 @@
             color: var(--text-color);
             font-size: 16px;
             font-weight: 600;
-            margin-top: 8px;
             text-align: center;
             transition: color 0.3s ease;
+            margin: 8px 18px;
 
             &:hover {
               color: var(--highlight-color);
