--- a/src/app/pages/about-page/about-page.component.scss
+++ b/src/app/pages/about-page/about-page.component.scss
@@ -68,13 +68,13 @@
         text-align: center;
         display: flex;
         align-items: center;
-        justify-content: space-between;
+        justify-content: flex-end;
 
         .btn {
           background-color: #04b2c6;
           color: white;
           font-size: 16px;
-          padding: 10px 20px;
+          padding: 10px;
           border: none;
           border-radius: 5px;
           cursor: pointer;
@@ -85,6 +85,7 @@
           display: flex;
           align-items: center;
           justify-content: center;
+          margin: 0 2px;
         }
 
         .btn:hover {
