--- a/src/app/pages/professional-experiences-page/professional-experiences-page.component.scss
+++ b/src/app/pages/professional-experiences-page/professional-experiences-page.component.scss
@@ -75,7 +75,7 @@
 @media (max-width: 600px) {
   #container-experience-container {
     justify-content: space-between;
-    height: auto;
+    height: 560px;
 
     h1 {
       font-size: var(--font-size-large-mobile);
