--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -35,22 +35,60 @@
       }
     }
 
-    .nav-right {
-      .contact-button {
-        padding: 15px 30px;
-        background: none;
-        border: 2px solid var(--highlight-color);
-        color: var(--highlight-color);
-        font-size: 16px;
-        cursor: pointer;
-        border-radius: 8px;
-        transition: all 0.3s ease-in-out;
+    .buttons-nav-right {
+      width: 100%;
+      max-width: 240px;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+
+      .language-container {
+        position: relative;
+
+        .language-selector {
+          background: none;
+          border: none;
+          cursor: pointer;
+        }
+
+        .language-menu {
+          position: absolute;
+          top: 65%;
+          left: -29px;
+          //background: #444;
+          border-radius: 5px;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          padding: 10px;
+          z-index: 1000;
+
+          button {
+            background: #444;
+            border-radius: 5px;
+          }
+        }
       }
 
-      .contact-button:hover {
-        background: var(--highlight-color);
-        color: #fff;
+      .nav-right {
+        .contact-button {
+          padding: 15px 30px;
+          background: none;
+          border: 2px solid var(--highlight-color);
+          color: var(--highlight-color);
+          font-size: 16px;
+          cursor: pointer;
+          border-radius: 8px;
+          transition: all 0.3s ease-in-out;
+        }
+
+        .contact-button:hover {
+          background: var(--highlight-color);
+          color: #fff;
+        }
       }
+
     }
   }
 }
@@ -73,10 +111,31 @@
         }
       }
 
-      .nav-right {
-        .contact-button {
-          padding: 10px 20px;
+      .buttons-nav-right {
+        .language-container {
+          .language-selector {
+            img {
+              width: 50px;
+              height: 50px;
+            }
+          }
+
+          .language-menu {
+            button {
+              img {
+                width: 50px;
+                height: 50px;
+              }
+            }
+          }
+
         }
+        .nav-right {
+          .contact-button {
+            padding: 10px 20px;
+          }
+        }
+
       }
     }
   }
