--- a/src/app/components/project-card/project-card-slides-desktop/project-card-slides-desktop.component.html
+++ b/src/app/components/project-card/project-card-slides-desktop/project-card-slides-desktop.component.html
@@ -18,6 +18,7 @@
           <a [href]="project.link" target="_blank" class="project-link">
             <img [ngSrc]="project.image.src"
                  [alt]="project.image.alt"
+                 [title]="project.image.title"
                  class="project-image"
                  width="800"
                  height="700"/>
