--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,7 +1,7 @@
 <div id="background-home-page">
   <img [ngSrc]="homePageData.backgroundImage.src"
        [alt]="homePageData.backgroundImage.alt"
-       [title]="homePageData.backgroundImage.alt"
+       [title]="homePageData.backgroundImage.title"
        fill>
 </div>
 <div id="container-home-page">
@@ -30,13 +30,13 @@
   <div class="image-home-page floating">
     <img [ngSrc]="homePageData.mainImage.src"
          [alt]="homePageData.mainImage.alt"
-         [title]="homePageData.mainImage.alt"
+         [title]="homePageData.mainImage.title"
          fill>
   </div>
 </div>
 <div id="icon-home-page">
   <img [ngSrc]="homePageData.iconImage.src"
        [alt]="homePageData.iconImage.alt"
-       [title]="homePageData.iconImage.alt"
+       [title]="homePageData.iconImage.title"
        fill>
 </div>
