--- a/src/app/pages/skills-page/skills-page.component.html
+++ b/src/app/pages/skills-page/skills-page.component.html
@@ -30,6 +30,7 @@
            [ngStyle]="{'animation-delay': (i * 0.1) + 's'}"
            [ngSrc]="skill.src"
            [alt]="skill.alt"
+           [title]="skill.title"
            height="60"
            width="60">
     </div>
