--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,28 +1,43 @@
 <div id="container-navbar">
   <div class="base-navbar">
     <div class="nav-left" (click)="scrollToHome()">
-      <img ngSrc="assets/gif-code.gif" alt="DVLPR" title="" height="720" width="976"/>
+      <img ngSrc="assets/gif-code.gif" alt="DVLPR" title="DVLPR" height="720" width="976"/>
       <span>DVLPR</span>
     </div>
     <div class="buttons-nav-right">
 
       <div class="language-container">
         <button class="language-selector" (click)="toggleLanguageMenu()">
-          <img [src]="selectedLanguage.icon" alt="Idioma" width="85" height="85"/>
+          <img [src]="selectedLanguage.icon"
+               [alt]="randomTexts.language"
+               [title]="randomTexts.language"
+               width="85"
+               height="85"/>
         </button>
         <div *ngIf="isLanguageMenuOpen" class="language-menu">
           <button (click)="changeLanguage('pt')">
-            <img src="assets/language-icons/brasil-icon.png" alt="Português" width="64" height="64"/>
+            <img ngSrc="assets/language-icons/brasil-icon.png"
+                 alt="Português"
+                 title="Português"
+                 width="64"
+                 height="64"/>
           </button>
           <button (click)="changeLanguage('es')">
-            <img src="assets/language-icons/espanha-icon.png" alt="Español" width="64" height="64"/>
+            <img ngSrc="assets/language-icons/espanha-icon.png"
+                 alt="Español"
+                 title="Español"
+                 width="64"
+                 height="64"/>
           </button>
           <button (click)="changeLanguage('en')">
-            <img src="assets/language-icons/eua-icon.png" alt="English" width="64" height="64"/>
+            <img ngSrc="assets/language-icons/eua-icon.png"
+                 alt="English"
+                 title="English"
+                 width="64"
+                 height="64"/>
           </button>
         </div>
       </div>
-
 
       <div class="nav-right">
         <button class="contact-button" (click)="scrollToContact()">{{ randomTexts.contact }}</button>
