--- a/src/app/pages/contact-page/contact-page.component.html
+++ b/src/app/pages/contact-page/contact-page.component.html
@@ -19,13 +19,25 @@
     </span>
     <div class="contact-details animate__animated animate__slideInBottom animate__delay-2s">
       <a [href]="'mailto:' + dataContactPage.emailUser">
-        <img ngSrc="assets/email.png" alt="Email" height="60" width="60">
+        <img ngSrc="assets/email.png"
+             alt="Email"
+             title="Email"
+             height="60"
+             width="60"/>
       </a>
       <a [href]="dataContactPage.githubUser" target="_blank">
-        <img ngSrc="assets/skills/github.png" alt="GitHub" height="60" width="60">
+        <img ngSrc="assets/skills/github.png"
+             alt="GitHub"
+             title="Email"
+             height="60"
+             width="60"/>
       </a>
       <a [href]="dataContactPage.linkedinUser" target="_blank">
-        <img ngSrc="assets/linkedin.png" alt="LinkedIn" height="60" width="60">
+        <img ngSrc="assets/linkedin.png"
+             alt="LinkedIn"
+             title="Email"
+             height="60"
+             width="60"/>
       </a>
     </div>
   </div>
