--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,32 @@
 #container-app-component {
   width: 100%;
 }
+
+.loader-container {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  background: #1e1e1e;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+
+  .loader {
+    width: 50px;
+    height: 50px;
+    border: 5px solid #ffffff;
+    border-top-color: transparent;
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+  }
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
