--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
-<div *ngIf="isLoading" class="loader-container">
-  <div class="loader"></div>
-</div>
+<!--<div *ngIf="isLoading" class="loader-container">-->
+<!--  <div class="loader"></div>-->
+<!--</div>-->
 
-<div *ngIf="!isLoading" class="container-app-component">
+<div class="container-app-component">
   <app-navbar></app-navbar>
 
   <div id="fullpage">
